Integrate running SQL version